--- a/demo/attr/index.html
+++ b/demo/attr/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>t1</title>
+    <title>attr</title>
     <style>
         html,
         body {
