--- a/demo/img/index.html
+++ b/demo/img/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-
+<!doctype html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>see02</title>
+    <title>img</title>
     <style>
         html,
         body {
@@ -12,7 +11,6 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            overflow: hidden;
         }
 
         #container {
@@ -24,6 +22,6 @@
 
 <body>
     <div id="container"></div>
+    <!-- <img id="pic" src="https://zos.alipayobjects.com/rmsportal/nAVchPnSaAWncPj.png" alt=""> -->
 </body>
-
 </html>
