--- a/demo/animate/index.html
+++ b/demo/animate/index.html
@@ -17,13 +17,14 @@
 
         #container {
             width: 100%;
-            height: 100%;
+            height: 90%;
         }
     </style>
 </head>
 
 <body>
     <div id="container"></div>
+    <div class="stop">暂停按钮</div>
 </body>
 
 </html>
