--- a/demo/animate/index.html
+++ b/demo/animate/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>animate</title>
-    <style>
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-
-        #container {
-            width: 100%;
-            height: 90%;
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>animate</title>
+  <style>
+    html,
+    body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+    #container {
+        width: 100%;
+        height: 90%;
+    }
+  </style>
 </head>
-
 <body>
-    <div id="container"></div>
-    <div class="stop">暂停按钮</div>
+  <div id="container"></div>
+  <div class="stop">暂停按钮</div>
+  <div class="again">再来一遍</div>
+  <div class="add">增加一个自定义动画</div>
 </body>
-
 </html>
