--- a/demo/img/index.html
+++ b/demo/img/index.html
@@ -16,11 +16,20 @@
         #container {
             width: 100%;
             height: 100%;
+            position: absolute;
+            z-index: 1;
+        }
+        #container2 {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            z-index: 2;
         }
     </style>
 </head>
 
 <body>
     <div id="container"></div>
+    <div id="container2"></div>
 </body>
 </html>
