--- a/demo/img/index.html
+++ b/demo/img/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>img</title>
+    <title>image</title>
     <style>
         html,
         body {
