--- a/demo/canvaslib/index.html
+++ b/demo/canvaslib/index.html
@@ -10,8 +10,52 @@
     <title>canvaslib</title>
   </head>
   <style>
+    .header {
+      width: 100%;
+      height: 30px;
+      background: red;
+    }
+
+    .content {
+      overflow: hidden;
+      position: relative;
+    }
+
+    .footer {
+      height: 30px;
+      background: red;
+    }
+
+    .middle {
+      margin: 0 100px;
+      height: 80px;
+      background: green;
+    }
+
+    .left {
+      position: absolute;
+      left: 0;
+      width: 100px;
+      height: 80px;
+      background: yellow;
+    }
+
+    .right {
+      position: absolute;
+      right: 0px;
+      width: 100px;
+      height: 80px;
+      background: pink;
+    }
   </style>
   <body>
-    <canvas id="canvas" width="400" height="400"></canvas>
+    <div class="header"></div>
+    <div class="content">
+      <div class="left"></div>
+      <div class="middle"></div>
+      <div class="right"></div>
+    </div>
+    <div class="footer"></div>
+    <!-- <canvas id="canvas" width="400" height="400"></canvas> -->
   </body>
 </html>
