feat: 支持矩形圆角和椭圆

--- a/demo/svglib/index.html
+++ b/demo/svglib/index.html
@@ -14,8 +14,14 @@
   <body>
     <svg width="600" height="600" xmlns="http://www.w3.org/2000/svg" version="1.1">
       <!-- <ellipse cx="80" cy="80" rx="50" ry="50" style="fill:yellow;stroke:purple;stroke-width:2"/> -->
-      <path d="M150 120
-           a 50 80, 0, 1, 0, 0, 1 z" stroke="blue" fill="none"/>
+      <path d="M100 120
+           a 20 20, 0, 0, 1, 20, -20
+           h 60
+           a 20 20, 0, 0, 1, 20, 20
+           v 60
+           a 20 20, 0, 0, 1, -20, 20
+           h -60
+           a 20 20, 0, 0, 1, -20, -20" stroke="blue" fill="none"/>
     </svg>
 </html>
 
